--- a/lib/l10n/intl_ja.arb
+++ b/lib/l10n/intl_ja.arb
@@ -2,7 +2,7 @@
   "activities": "アクティビティ",
   "add": "追加",
   "addComment": "コメントを追加..",
-  "appTitle": "オマージュインスタ",
+  "appTitle": "homageInstagram",
   "camera": "カメラ",
   "cancel": "キャンセル",
   "cancelConfirm": "キャンセルしますか？",
